src/test/deca/context/valid/expr.deca
// Description :
// test d'une expression quelconque
//
// Résultats :
// ok

{
  4;
  5.0;
  null;
  "Hello";
  println("Hello");
  true;
}
